
// Pour afficher le diagramme --> DBML: Preview
// Les clés primaires sont indiquées par [primary key] et nommées avec le suffixe "_ID".
// Les clés étrangères sont indiquées par [ref: > Table.Colonne] et nommées avec le suffixe "_id".

//  La structure des tables est construite de cette manière :
//    Table nom_table {
//      nom_colonne type_données [paramètres]
//    }

//  [primary key]             // clé primaire
//  [not null]                // valeur obligatoire
//  [null]                    // valeur optionnelle (par défaut)
//  [unique]                  // valeur unique
//  [increment]               // auto-incrémentation
//  [default: valeur]         // valeur par défaut
//  [check: `expression`]     // condition à respecter
//  [note: 'texte']           // note descriptive

//  Types de relations :
//    <: one-to-many 
//    >: many-to-one
//    -: one-to-one 
//    <>: many-to-many

Project Lipids_Database {
  database_type: 'SQLite'
  Note: 'Base de données de lipides bactériens issus de données multi-plateformes de spectrométrie de masse'
}

Table "Organism" {
  Organism_ID integer [primary key, increment]

  Strain text [null, note: 'Souche bactérienne']
  Genus text  [null,note: 'Genre bactérien']
  Species text  [null, note: 'Espèce bactérienne']
  Full_name text [null, note: 'Nom complet']
}

Table "Experiment" {
  Experiment_ID integer [primary key, increment]

  // Une expérience est associée à un organisme et un organisme peut être associé à plusieurs expériences
  Organism_id integer [ref: > Organism.Organism_ID]

  Sample_prep text  [null, note: 'Préparation de l échantillon']
  Culture_mode text  [null, note: 'Mode de culture']
  DOI text  [null, note: 'Référence de la publication associée']
}

Table "Method" {
  Method_ID integer [primary key, increment]

  Instrument text [null, note: 'Nom de l instrument']
  Instrument_type text [null, note: 'Type d instrument']
  Source text [null, note: 'Source d ionisation']
  Polarity text [null, note: 'Polarité d acquisition']
  Fragmentation_mode text [null, note: 'Mode de fragmentation']

   checks {
    `Polarity = 'positive' OR Polarity = 'negative'` [name: 'chk_polarity']
  }
}

Table "File" {
  File_ID integer [primary key, increment]

  // Un fichier mzML est associé à une méthode et une méthode peut être reliée à plusieurs fichiers mzML
  Method_id integer [ref: > Method.Method_ID] 
  // Un fichier mzML est associé à une expérience et une expérience peut être reliée à plusieurs fichiers mzML
  Experiment_id integer [ref: > Experiment.Experiment_ID]

  Name_file text [null,note: 'Nom du fichier mzML']
}

Table "Adduct" {
  Adduct_ID integer [primary key, increment]
  
  Adduct_name text  [null, note: 'Notation de l adduct']
  Charge integer  [null,note: 'Charge de l adduct']

  checks {
  `Charge != 0` [name: 'chk_charge_not_zero']
  }
}

Table "Detection" {
  Detection_ID integer [primary key, increment]

  // Une détection est associée à un adduct et un adduct peut être associé à plusieurs détections
  Adduct_id integer [ref: > Adduct.Adduct_ID] 
  // Une détection provient d'un fichier mzML et un fichier mzML peut contenir plusieurs détections 
  File_id integer [ref: > File.File_ID]        

  Precursor_MZ real [note: 'Rapport masse/charge du précurseur en Da'] // Valeur obligatoire 
  Scan integer  [note: 'Numéro de scan dans le fichier mzML']
  MS_level integer [note: 'Niveau de fragmentation']
  Num_Peaks integer [note: 'Nombre de fragments associés au précurseur']
  Energie_collision real [null,note: 'Énergie de fragmentation, unité dépend du mode de fragmentation']
  Exact_mass real [null, note: 'Masse exacte monoisotopique en Da']
  Molecular_weight real [null, note: 'Masse moléculaire moyenne en Da']
  RT real [null, note: 'Temps de rétention en minutes']
  CCS real [null, note: 'Cross Section en Å²']

  checks {
    `Precursor_MZ > 0` [name: 'chk_precursor_positive']
    `Exact_mass > 0` [name: 'chk_exact_mass_positive']
    `Molecular_weight > 0` [name: 'chk_molecular_weight_positive']
    `RT >= 0` [name: 'chk_rt_positive']
    `CCS > 0` [name: 'chk_ccs_positive']
  }
}

Table "Fragment" {
  Fragment_ID integer [primary key, increment]

  // Un fragment est associé à une détection et une détection peut contenir plusieurs fragments
  Detection_id integer [ref: > Detection.Detection_ID]

  MZ real   [null, note: 'Rapport masse/charge du fragment en Da']
  Intensity real  [null, note: 'Intensité du signal du fragment']

  checks {
  `MZ > 0` [name: 'chk_fragment_mz_positive']
  `Intensity > 0` [name: 'chk_intensity_positive']
  }
}

Table "Lipid" {
  Lipid_ID integer [primary key, increment]
  Lipid_name text [null, note: 'Nom du lipide']
  Lipid_class text [null, note: 'Classe du lipide']
  Lipid_category text [null, note: 'Catégorie du lipide']
  Formula text [null, note: 'Formule chimique']
}

Table "Annotation" {
  Annotation_ID integer [primary key, increment]

  // Une annotation est associée à une détection et une détection peut avoir plusieurs annotations
  Detection_id integer [ref: > Detection.Detection_ID]
  // Une annotation est associée à un lipide et un lipide peut être associé à plusieurs annotations
  Lipid_id integer [ref: > Lipid.Lipid_ID]

  Confidence_level integer [null, note: 'Niveau de confiance de l annotation']
  
  checks {
  `Confidence_level >= 0 AND Confidence_level <= 4` [name: 'chk_confidence_level']
  }
}